add data layer and inector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidTaskNoThirdParty</string>
+    <string name="url">https://instabug.com</string>
 </resources>
